--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Contatos</string>
+    <string name="enviar_e_mail">Enviar e-mail</string>
+    <string name="chamar">Chamar</string>
+    <string name="acessar_site">Acessar Site</string>
+    <string name="editar">Editar</string>
+    <string name="remover">Remover</string>
 </resources>
